--- a/frontend/src/locales/ro/pages.json
+++ b/frontend/src/locales/ro/pages.json
@@ -168,7 +168,7 @@
       "domain": "Domeniu",
       "learningMode": "Formă de învățământ",
       "degree": "Ciclu de studii",
-      "studyProgram": "Program de studiu",
+      "studyProgram": "Study Program",
       "currentGroup": "Grupa Curentă",
       "currentYear": "Anul Curent",
       "currentSemester": "Semestrul Curent"
